# llm-gateway

./: .dockerignore  .envrc.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  catalog-info.yaml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  lefthook.yml  llm_gateway.db  nginx.conf  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  test_uv_install.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: default.yml  guardrails.yaml  guardrails.yml
alembic/: env.py
alembic/versions/: 149ba34714a9_add_cohereresponse_table.py  25b775ad7e71_add_prompts_table.py  66a3907172e2_add_openairesponse_table.py  f6d7b8ea651b_add_extras_arg_to_openai.py
fixtures/: README.md  init.sql
front_end/: .env-cmdrc  .eslintrc.json  .gitignore  Dockerfile  README.md  __init__.py  package.json
front_end/public/: index.html  manifest.json  styles.css
front_end/public/styles/: styles.css
front_end/src/: constants.tsx  index.tsx
front_end/src/app/: app.spec.ts  app.spec.tsx  app.tsx  constants.ts  interfaces.tsx
front_end/src/app/components/ChatBox/: ChatBox.tsx  ClearButton.tsx  MessageHistory.tsx  SendButton.tsx  index.ts
front_end/src/app/components/ChatNavBar/: ChatNavBar.tsx  ChatNavItem.tsx  ClearChatDialog.tsx  index.ts
front_end/src/app/components/EmptyChatBox/: EmptyChatBoxComponent.tsx  index.ts
front_end/src/app/components/Icons/: Arrow.tsx  CancelIcon.tsx  (+5 more)
front_end/src/app/schemas/: prompt.ts
front_end/src/app/utils/: api.ts
front_end/src/environments/: environment.dev.ts  environment.prod.ts  environment.staging.ts  environment.ts
front_end/src/services/: apiService.tsx
front_end/src/test_data/: conversation.ts
llm_gateway/: README.md  _version.py  app.py  cli.py  config.py  constants.py  exceptions.py  logger.py  models.py  pii_scrubber.py  types.py  utils.py
llm_gateway/db/: models.py  utils.py
llm_gateway/providers/: awsbedrock.py  cohere.py  openai.py
llm_gateway/routers/: api.py  awsbedrock_api.py  cohere_api.py  openai_api.py  prompts_api.py
llm_gateway/utils/: openai_wrapper.py  utils.py
llm_gateway/wrappers/: cohere_wrapper.py
mock-data/: init.sql
scripts/: activate.sh
tests/: conftest.py  test_pii_scrubber.py  test_utils.py
(+21 files in other folders)
