[project]
name = "llm-gateway"
version = "0.1.0"
description = "Service to facilitate access to large language models"
authors = [
    {name = "Data Science & Engineering at Wealthsimple", email = "data@wealthsimple.com"}
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11.3,<3.12"
dependencies = [
    "aiohttp>=3.9.4",
    "alembic>=1.8.1",
    "fastapi>=0.109.1",
    "openai[datalib]>=0.27.8",
    "pandas>=2.0.2",
    "psycopg2-binary>=2.9.6",
    "pydantic>=1.10.13",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.17",
    "uvicorn[standard]>=0.21.1"
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.3",
    "pytest>=7.4.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
